--- a/newsletter.html
+++ b/newsletter.html
@@ -60,7 +60,7 @@
     <section id="newsletter" class="section-p1 section-m1   ">
         <div class="newstext">
             <h4>Sign Up for News Letter</h4>
-            <p>Get E-mail Updates at ourlatest shop and <span> special offers.</span></p>
+            <p>Get E-mail Updates at ourlatest shop and <span> special offers. And be up-to-date.</span></p>
         </div>
         <div class="form">
             <input type="email" placeholder="Your E-mail Address">
