--- a/footer.html
+++ b/footer.html
@@ -217,7 +217,7 @@
                     <ul class="footer-links">
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Contribute</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="#">Privacy Policy</a></li>
 
                     </ul>
