--- a/footer.html
+++ b/footer.html
@@ -215,10 +215,10 @@
                 <div class="col-xs-6 col-md-3">
                     <h6>Quick Links</h6>
                     <ul class="footer-links">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Gallery</a></li>
+                        <li><a href="#">Store</a></li>
+                        <li><a href="#">Subscribe</a></li>
 
                     </ul>
                 </div>
